--- a/src/main/resources/com/example/FrontEnd/zManualCustomerBankStatement.fxml
+++ b/src/main/resources/com/example/FrontEnd/zManualCustomerBankStatement.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -259,11 +261,16 @@
         </Pane>
         <Pane layoutX="304.0" layoutY="112.0" prefHeight="565.0" prefWidth="621.0">
             <children>
-                <TextArea layoutX="14.0" layoutY="14.0" prefHeight="136.0" prefWidth="294.0" text="This is only a placeholder for text we put in&#10;&#10;&#10;&#10;&#10;Mainly because it comes with a scroll in function&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;Is this be really annoying without it">
+                <TextArea layoutX="28.0" layoutY="283.0" prefHeight="194.0" prefWidth="536.0" text="Bank statement Interface lets the customer see the withdrawals, deposts and transfers that&#10;the customer has made through their account.&#10;&#10;Bank interface instructions:&#10;1.&#10;2.&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;">
                     <font>
                         <Font name="Arial" size="12.0" />
                     </font>
                 </TextArea>
+            <ImageView fitHeight="262.0" fitWidth="410.0" layoutX="28.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@image/Bank%20Statement%20.png" />
+               </image>
+            </ImageView>
             </children>
         </Pane>
         <Pane layoutX="807.0" layoutY="620.0" prefHeight="56.0" prefWidth="132.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
