--- a/src/main/resources/com/example/FrontEnd/zManualCustomerProject.fxml
+++ b/src/main/resources/com/example/FrontEnd/zManualCustomerProject.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -273,11 +275,16 @@
         </Pane>
         <Pane layoutX="318.0" layoutY="111.0" prefHeight="565.0" prefWidth="621.0">
             <children>
-                <TextArea layoutX="14.0" layoutY="14.0" prefHeight="136.0" prefWidth="294.0" text="This is only a placeholder for text we put in&#10;&#10;&#10;&#10;&#10;Mainly because it comes with a scroll in function&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;Is this be really annoying without it">
+                <TextArea layoutX="9.0" layoutY="324.0" prefHeight="176.0" prefWidth="507.0" text="The profile: The profile interface enables the customer to check his/her current information.&#10; A customer can also change his/her information according to requirement. &#10;&#10;The profile interafce instructions : &#10;1. By clicking on the profile interface the customer gets to see all of the information they &#10;provide the bank system collectively at a single place on the top of the page.&#10;2. To change the password, the customer has to input their current password followed by&#10;new password and then confirm it. When all the inputs are properly filled, the customer &#10;can succesfully change their password by clicking the &quot;Change Password&quot; button.&#10;3. To change the first name, the customer will have to input a new first name. By clicking the&#10;&quot;Change first name&quot; button, the customer's first name will be changed successfully.&#10;4. To change the last name, the customer will have to input a new last name. By clicking the&#10;&quot;Change first name&quot; button, the customer's last name will be changed successfully.&#10;5. The customer can also add and see his/her photo.&#10;6. In order to get back to the user menu, press the button on the top left corner named “User menu” alternatively you can sign out using the “Sign Out”.&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;Is this be really annoying without it">
                     <font>
                         <Font name="Arial" size="12.0" />
                     </font>
                 </TextArea>
+            <ImageView fitHeight="307.0" fitWidth="433.0" layoutX="8.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@image/Profile.png" />
+               </image>
+            </ImageView>
             </children>
         </Pane>
         <Pane layoutX="807.0" layoutY="620.0" prefHeight="56.0" prefWidth="132.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
