--- a/src/main/resources/com/example/FrontEnd/zManualCustomerRegisterCustomer.fxml
+++ b/src/main/resources/com/example/FrontEnd/zManualCustomerRegisterCustomer.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -259,11 +261,21 @@
         </Pane>
         <Pane layoutX="318.0" layoutY="111.0" prefHeight="565.0" prefWidth="621.0">
             <children>
-                <TextArea layoutX="14.0" layoutY="14.0" prefHeight="136.0" prefWidth="294.0" text="This is only a placeholder for text we put in&#10;&#10;&#10;&#10;&#10;Mainly because it comes with a scroll in function&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;Is this be really annoying without it">
+                <TextArea layoutX="5.0" layoutY="255.0" prefHeight="241.0" prefWidth="577.0" text="The create account interface : There are 2 separate create account interface. &#10;One is for the customer (without security key) and the other is for employees (with the security key).&#10;Security key: A key of numbers that is needed to create an employee account and&#10; is only given by an admin account. When creating a customer account this is not needed.&#10;&#10;The create account interface instructions :&#10;1. The create account page allows the customer to make an account.&#10;2. A customer can create an accoubt by providing the customers First name, last name and password.&#10;3. The password has to follow the conventions(minimum 8 characters, minimum 1 lowercase letter,  lowercase letter, &#10;minimum 1 uppercase letter, minimum 1 special character ) and rules stated and must be confirmed by the customer. &#10;4. Finally by clicking the &quot;Create Account&quot; button the customer can successfully create an account in the bank's system.&#10;&#10;The create Employee account interface instructions :&#10;1. The employee needs to first select his/her title by clicking the “Title” option.&#10;2. A customer can create an accoubt by providing the customers First name, last name and password.&#10;3. The password has to follow the conventions(minimum 8 characters, minimum 1 lowercase letter,  lowercase letter, minimum 1 uppercase letter, minimum 1&#10;special character ) and rules stated and must be confirmed by the customer.&#10;4. After inputting all of the above mentioned inputs, the employee then needs to input his/her unique security key.&#10;5. Finally by clicking the &quot;Create Account&quot; button the customer can successfully create an account in the bank's system.&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;">
                     <font>
                         <Font name="Arial" size="12.0" />
                     </font>
                 </TextArea>
+            <ImageView fitHeight="235.0" fitWidth="282.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@image/Customer%20create%20account%20.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="206.0" fitWidth="306.0" layoutX="307.0" layoutY="10.0">
+               <image>
+                  <Image url="@../../../../../../../Employee%20Login.png" />
+               </image>
+            </ImageView>
             </children>
         </Pane>
         <Pane layoutX="807.0" layoutY="620.0" prefHeight="56.0" prefWidth="132.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
