--- a/src/main/resources/com/example/FrontEnd/zManualCustomerTransfer.fxml
+++ b/src/main/resources/com/example/FrontEnd/zManualCustomerTransfer.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -257,13 +259,18 @@
                 </Label>
             </children>
         </Pane>
-        <Pane layoutX="318.0" layoutY="111.0" prefHeight="565.0" prefWidth="621.0">
+        <Pane layoutX="320.0" layoutY="127.0" prefHeight="565.0" prefWidth="621.0" AnchorPane.leftAnchor="320.0">
             <children>
-                <TextArea layoutX="14.0" layoutY="14.0" prefHeight="136.0" prefWidth="294.0" text="This is only a placeholder for text we put in&#10;&#10;&#10;&#10;&#10;Mainly because it comes with a scroll in function&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;Is this be really annoying without it">
+                <TextArea layoutX="23.0" layoutY="320.0" prefHeight="179.0" prefWidth="581.0" text="The Transfer Interface: It makes it possible for the customer to transfer an amount of money&#10; from one's own account to another person's account.&#10;&#10;The transfer interface instructions: &#10;1. In order to successfully send the money, the customer needs to have sufficient balance &#10;in his/her account. &#10;2. Once the customer's balance is checked to be enough, he/she can then specify the information &#10;of the receiving account along with the money amount. &#10;3. Finally by clicking the &quot;Transfer&quot; button the customer succesfully transfers money from &#10;his/her account to the receiving account.&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;">
                     <font>
                         <Font name="Arial" size="12.0" />
                     </font>
                 </TextArea>
+            <ImageView fitHeight="297.0" fitWidth="507.0" layoutX="23.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@image/Transfer.png" />
+               </image>
+            </ImageView>
             </children>
         </Pane>
         <Pane layoutX="807.0" layoutY="620.0" prefHeight="56.0" prefWidth="132.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
