--- a/src/main/resources/com/example/FrontEnd/ZZManualEmployeeRegister.fxml
+++ b/src/main/resources/com/example/FrontEnd/ZZManualEmployeeRegister.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
@@ -12,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="675.0" prefWidth="939.0" style="-fx-background-color: #DCEBFA; -fx-background-color: #F8FBFF;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FrontEnd.ZZManualEmployeeRegisterController">
+<AnchorPane prefHeight="675.0" prefWidth="939.0" style="-fx-background-color: #DCEBFA; -fx-background-color: #F8FBFF;" stylesheets="@../../../style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FrontEnd.ZZManualEmployeeRegisterController">
     <children>
         <VBox prefHeight="679.0" prefWidth="319.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
@@ -25,83 +24,79 @@
                         </Label>
                     </children>
                 </Pane>
-                <ScrollPane prefHeight="567.0" prefWidth="286.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" VBox.vgrow="ALWAYS">
-                    <content>
-                        <AnchorPane prefHeight="565.0" prefWidth="304.0" style="-fx-background-color: #414D59;">
-                            <children>
-                                <Button fx:id="switchELMButton" alignment="BASELINE_LEFT" layoutY="84.0" mnemonicParsing="false" onAction="#switchToManualEmployeeLogin" onMouseEntered="#confirmHoverEntry" onMouseExited="#confirmHoverExit" prefHeight="55.0" prefWidth="304.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Employee login manual" textFill="WHITE">
-                                    <opaqueInsets>
-                                        <Insets />
-                                    </opaqueInsets>
-                                    <padding>
-                                        <Insets left="50.0" />
-                                    </padding>
-                                    <font>
-                                        <Font name="Arial Bold" size="17.0" />
-                                    </font>
-                                    <effect>
-                                        <Glow />
-                                    </effect>
-                                </Button>
-                                <Label alignment="CENTER" layoutY="-1.0" prefHeight="31.0" prefWidth="304.0" text="Switching to different manuals" textFill="WHITE">
-                                    <font>
-                                        <Font name="Arial Bold" size="20.0" />
-                                    </font>
-                                </Label>
-                                <Button fx:id="switchEMMButton" alignment="BASELINE_LEFT" layoutY="30.0" mnemonicParsing="false" onAction="#switchToManualEmployeeMenu" onMouseEntered="#confirmHoverEntry" onMouseExited="#confirmHoverExit" prefHeight="55.0" prefWidth="304.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Employee menu manual" textFill="WHITE">
-                                    <opaqueInsets>
-                                        <Insets />
-                                    </opaqueInsets>
-                                    <padding>
-                                        <Insets left="50.0" />
-                                    </padding>
-                                    <font>
-                                        <Font name="Arial Bold" size="17.0" />
-                                    </font>
-                                    <effect>
-                                        <Glow />
-                                    </effect>
-                                </Button>
-                                <Label alignment="CENTER" layoutY="194.0" prefHeight="31.0" prefWidth="304.0" text="Open new manual window" textFill="WHITE">
-                                    <font>
-                                        <Font name="Arial Bold" size="20.0" />
-                                    </font>
-                                </Label>
-                                <Button fx:id="openEMMButton" alignment="BASELINE_LEFT" layoutY="225.0" mnemonicParsing="false" onAction="#openToManualEmployeeMenu" onMouseEntered="#confirmHoverEntry" onMouseExited="#confirmHoverExit" prefHeight="55.0" prefWidth="304.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Employee menu manual" textFill="WHITE">
-                                    <opaqueInsets>
-                                        <Insets />
-                                    </opaqueInsets>
-                                    <padding>
-                                        <Insets left="50.0" />
-                                    </padding>
-                                    <font>
-                                        <Font name="Arial Bold" size="17.0" />
-                                    </font>
-                                    <effect>
-                                        <Glow />
-                                    </effect>
-                                </Button>
-                                <Button fx:id="openELMButton" alignment="BASELINE_LEFT" layoutY="280.0" mnemonicParsing="false" onAction="#openToManualEmployeeLogin" onMouseEntered="#confirmHoverEntry" onMouseExited="#confirmHoverExit" prefHeight="55.0" prefWidth="304.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Employee login manual" textFill="WHITE">
-                                    <opaqueInsets>
-                                        <Insets />
-                                    </opaqueInsets>
-                                    <padding>
-                                        <Insets left="50.0" />
-                                    </padding>
-                                    <font>
-                                        <Font name="Arial Bold" size="17.0" />
-                                    </font>
-                                    <effect>
-                                        <Glow />
-                                    </effect>
-                                </Button>
-                            </children>
-                        </AnchorPane>
-                    </content>
-                </ScrollPane>
+                  <AnchorPane prefHeight="552.0" prefWidth="304.0" style="-fx-background-color: #414D59;">
+                      <children>
+                          <Button fx:id="switchELMButton" alignment="BASELINE_LEFT" layoutY="84.0" mnemonicParsing="false" onAction="#switchToManualEmployeeLogin" onMouseEntered="#confirmHoverEntry" onMouseExited="#confirmHoverExit" prefHeight="55.0" prefWidth="319.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Employee login manual" textFill="WHITE">
+                              <opaqueInsets>
+                                  <Insets />
+                              </opaqueInsets>
+                              <padding>
+                                  <Insets left="50.0" />
+                              </padding>
+                              <font>
+                                  <Font name="Arial Bold" size="17.0" />
+                              </font>
+                              <effect>
+                                  <Glow />
+                              </effect>
+                          </Button>
+                          <Label alignment="CENTER" layoutY="-1.0" prefHeight="31.0" prefWidth="304.0" text="Switching to different manuals" textFill="WHITE">
+                              <font>
+                                  <Font name="Arial Bold" size="20.0" />
+                              </font>
+                          </Label>
+                          <Button fx:id="switchEMMButton" alignment="BASELINE_LEFT" layoutY="30.0" mnemonicParsing="false" onAction="#switchToManualEmployeeMenu" onMouseEntered="#confirmHoverEntry" onMouseExited="#confirmHoverExit" prefHeight="55.0" prefWidth="319.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Employee menu manual" textFill="WHITE">
+                              <opaqueInsets>
+                                  <Insets />
+                              </opaqueInsets>
+                              <padding>
+                                  <Insets left="50.0" />
+                              </padding>
+                              <font>
+                                  <Font name="Arial Bold" size="17.0" />
+                              </font>
+                              <effect>
+                                  <Glow />
+                              </effect>
+                          </Button>
+                          <Label alignment="CENTER" layoutY="194.0" prefHeight="31.0" prefWidth="319.0" text="Open new manual window" textFill="WHITE">
+                              <font>
+                                  <Font name="Arial Bold" size="20.0" />
+                              </font>
+                          </Label>
+                          <Button fx:id="openEMMButton" alignment="BASELINE_LEFT" layoutY="225.0" mnemonicParsing="false" onAction="#openToManualEmployeeMenu" onMouseEntered="#confirmHoverEntry" onMouseExited="#confirmHoverExit" prefHeight="55.0" prefWidth="319.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Employee menu manual" textFill="WHITE">
+                              <opaqueInsets>
+                                  <Insets />
+                              </opaqueInsets>
+                              <padding>
+                                  <Insets left="50.0" />
+                              </padding>
+                              <font>
+                                  <Font name="Arial Bold" size="17.0" />
+                              </font>
+                              <effect>
+                                  <Glow />
+                              </effect>
+                          </Button>
+                          <Button fx:id="openELMButton" alignment="BASELINE_LEFT" layoutY="280.0" mnemonicParsing="false" onAction="#openToManualEmployeeLogin" onMouseEntered="#confirmHoverEntry" onMouseExited="#confirmHoverExit" prefHeight="55.0" prefWidth="319.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Employee login manual" textFill="WHITE">
+                              <opaqueInsets>
+                                  <Insets />
+                              </opaqueInsets>
+                              <padding>
+                                  <Insets left="50.0" />
+                              </padding>
+                              <font>
+                                  <Font name="Arial Bold" size="17.0" />
+                              </font>
+                              <effect>
+                                  <Glow />
+                              </effect>
+                          </Button>
+                      </children>
+                  </AnchorPane>
             </children>
         </VBox>
-        <Pane layoutX="336.0" prefHeight="112.0" prefWidth="604.0" style="-fx-background-color: #215E9B; -fx-background-color: #27313A;" AnchorPane.leftAnchor="319.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
+        <Pane layoutX="336.0" prefHeight="112.0" prefWidth="604.0" style="-fx-background-color: #215E9B; -fx-background-color: #27313A;" AnchorPane.leftAnchor="319.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
                 <Label layoutX="57.0" layoutY="40.0" prefHeight="32.0" prefWidth="507.0" text="The manual four employees register" textAlignment="CENTER" textFill="WHITE">
                     <font>
