--- a/src/main/resources/com/example/FrontEnd/userMenu.fxml
+++ b/src/main/resources/com/example/FrontEnd/userMenu.fxml
@@ -211,17 +211,7 @@
                   <Font name="Arial Bold" size="24.0" />
                </font>
             </Label>
-            <Label alignment="CENTER_RIGHT" layoutX="15.0" layoutY="124.0" prefHeight="35.0" prefWidth="88.0" text="Name: " textAlignment="CENTER">
-               <font>
-                  <Font name="Arial Bold" size="24.0" />
-               </font>
-            </Label>
-            <Label layoutX="103.0" layoutY="124.0" prefHeight="35.0" prefWidth="319.0" text="Last name?" textAlignment="CENTER">
-               <font>
-                  <Font name="Arial Bold" size="24.0" />
-               </font>
-            </Label>
-            <ImageView fx:id="ImageProfile" fitHeight="147.0" fitWidth="166.0" layoutX="441.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="imageProfile" fitHeight="147.0" fitWidth="166.0" layoutX="441.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
 
             <Label alignment="CENTER_RIGHT" layoutX="17.0" layoutY="89.0" prefHeight="35.0" prefWidth="88.0" text="Name: " textAlignment="CENTER">
                <font>
