--- a/src/main/resources/com/example/FrontEnd/ZZManualEmployee.fxml
+++ b/src/main/resources/com/example/FrontEnd/ZZManualEmployee.fxml
@@ -138,7 +138,7 @@
         </Pane>
         <Pane layoutX="318.0" layoutY="111.0" prefHeight="565.0" prefWidth="621.0">
             <children>
-                <TextArea layoutX="14.0" layoutY="14.0" prefHeight="136.0" prefWidth="294.0" text="This is only a placeholder for text we put in&#10;&#10;&#10;&#10;&#10;Mainly because it comes with a scroll in function&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;Is this be really annoying without it">
+                <TextArea layoutX="24.0" layoutY="163.0" prefHeight="214.0" prefWidth="574.0" text="If you are not an employee or wish to become an employee you do not log here.&#10;&#10;Please note the security keys in the employee menu are just an example they &#10;are not the real employee keys Used to create employee accounts&#10;&#10;Due to the fact employee accounts and customer accounts of the employee are tied together&#10;&#10;To change your name, your profile image, And change your password you must access&#10;Your corresponding bank account that is attached to your employee account and make the &#10;corresponding changes there. The corresponding changes be made to your employee account as well&#10;&#10;">
                     <font>
                         <Font name="Arial" size="12.0" />
                     </font>
