--- a/src/main/resources/com/example/FrontEnd/ZZManualEmployeeLogin.fxml
+++ b/src/main/resources/com/example/FrontEnd/ZZManualEmployeeLogin.fxml
@@ -6,6 +6,8 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -110,11 +112,16 @@
         </Pane>
         <Pane layoutX="318.0" layoutY="111.0" prefHeight="565.0" prefWidth="621.0">
             <children>
-                <TextArea layoutX="14.0" layoutY="14.0" prefHeight="136.0" prefWidth="294.0" text="This is only a placeholder for text we put in&#10;&#10;&#10;&#10;&#10;Mainly because it comes with a scroll in function&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;Is this be really annoying without it">
+                <TextArea layoutX="28.0" layoutY="356.0" prefHeight="136.0" prefWidth="565.0" text="Login Employee interface instructions: &#10;1. The employee needs to first provide their unique ID (8-digit number created by the bank, in case you&#10;forget it an employee can fetch it for you), &#10;password (password that you created during account creation) and &#10;Employee security key (only applicable for employees working in the bank). The security key must&#10;Correspond to the correct position.&#10;&#10;2. Then by clicking the &quot;Login&quot; button, the employee can successfully login to their respective account.">
                     <font>
                         <Font name="Arial" size="12.0" />
                     </font>
                 </TextArea>
+            <ImageView fitHeight="335.0" fitWidth="465.0" layoutX="78.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@image/Employee%20Login.png" />
+               </image>
+            </ImageView>
             </children>
         </Pane>
         <Pane layoutX="807.0" layoutY="620.0" prefHeight="56.0" prefWidth="132.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
