--- a/src/main/resources/com/example/FrontEnd/ZZManualEmployeeMenu.fxml
+++ b/src/main/resources/com/example/FrontEnd/ZZManualEmployeeMenu.fxml
@@ -6,6 +6,8 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -110,11 +112,16 @@
         </Pane>
         <Pane layoutX="318.0" layoutY="111.0" prefHeight="565.0" prefWidth="621.0">
             <children>
-                <TextArea layoutX="14.0" layoutY="14.0" prefHeight="136.0" prefWidth="294.0" text="This is only a placeholder for text we put in&#10;&#10;&#10;&#10;&#10;Mainly because it comes with a scroll in function&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;Is this be really annoying without it">
+                <TextArea layoutX="17.0" layoutY="344.0" prefHeight="156.0" prefWidth="590.0" text="The employee menu:&#10;&#10;The different button selection on the left side allows you to select from a different amount of actions.&#10;You can log out, refresh the page when needed, access the employee manual,  exit the program,&#10;With employee level access or higher you can open a employees account, &#10;with a managers level of access You can delete customers and employees as long as &#10;1. the employee is not you &#10;2. that the employee Or customer is selected &#10;3. and that the employee or customer does not have any attaching Thank accounts &#10;Two there Accounts, You can also change the security key for employees,&#10;With a Admin level access same as the above but now you can delete employees and customers&#10;Apart from yourself with attached bank accounts, and finally you can change all security keys&#10;Four employee, manager, and Atman.&#10;&#10;To select account click on the select a customer or select  a employee button after selecting the account&#10;You wish to interact with.&#10;&#10;To change a security key type in the new key next to change key: And then selectively change key &#10;In the level of access you possess&#10;">
                     <font>
                         <Font name="Arial" size="12.0" />
                     </font>
                 </TextArea>
+            <ImageView fitHeight="316.0" fitWidth="470.0" layoutX="100.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@image/employeeMenu.png" />
+               </image>
+            </ImageView>
             </children>
         </Pane>
         <Pane layoutX="807.0" layoutY="620.0" prefHeight="56.0" prefWidth="132.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
