--- a/src/main/resources/com/example/FrontEnd/ZZManualEmployeeRegister.fxml
+++ b/src/main/resources/com/example/FrontEnd/ZZManualEmployeeRegister.fxml
@@ -6,6 +6,8 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -110,11 +112,16 @@
         </Pane>
         <Pane layoutX="318.0" layoutY="111.0" prefHeight="565.0" prefWidth="621.0">
             <children>
-                <TextArea layoutX="14.0" layoutY="14.0" prefHeight="136.0" prefWidth="294.0" text="This is only a placeholder for text we put in&#10;&#10;&#10;&#10;&#10;Mainly because it comes with a scroll in function&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;Is this be really annoying without it">
+                <TextArea layoutX="27.0" layoutY="271.0" prefHeight="235.0" prefWidth="568.0" text="The create Employee account interface instructions :&#10;1. The employee needs to first select his/her title by clicking the “Title” option.&#10;2. A customer can create an accoubt by providing the customers First name, last name and &#10;password.&#10;3. The password has to follow the conventions(minimum 8 characters, minimum 1 lowercase letter,  &#10;lowercase letter, minimum 1 uppercase letter, minimum 1 special character ) and rules stated and &#10;must be confirmed by the customer.&#10;4. After inputting all of the above mentioned inputs, the employee then needs to input his/her unique &#10;security key.&#10;5. You must also select a position that corresponds the correct security key&#10;6. The Name and last name must be between 3 and 13 characters With no spaces.&#10;7. Finally by clicking the &quot;Create Account&quot; button the customer can successfully create an account in &#10;the bank's system.&#10;">
                     <font>
                         <Font name="Arial" size="12.0" />
                     </font>
                 </TextArea>
+            <ImageView fitHeight="256.0" fitWidth="342.0" layoutX="140.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@image/registerEmployee.png" />
+               </image>
+            </ImageView>
             </children>
         </Pane>
         <Pane layoutX="807.0" layoutY="620.0" prefHeight="56.0" prefWidth="132.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
