--- a/src/main/resources/com/example/FrontEnd/zManualCustomerBankStatement.fxml
+++ b/src/main/resources/com/example/FrontEnd/zManualCustomerBankStatement.fxml
@@ -233,14 +233,14 @@
         </Pane>
         <Pane layoutX="304.0" layoutY="112.0" prefHeight="565.0" prefWidth="621.0">
             <children>
-                <TextArea layoutX="28.0" layoutY="283.0" prefHeight="194.0" prefWidth="536.0" text="Bank statement Interface lets the customer see the withdrawals, deposts and transfers that&#10;the customer has made through their account.&#10;&#10;Bank interface instructions:&#10;1.&#10;2.&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;">
+                <TextArea layoutX="43.0" layoutY="389.0" prefHeight="111.0" prefWidth="536.0" text="Bank statement Interface lets the customer see the withdrawals, deposts and transfers that&#10;the customer has made through their account.&#10;&#10;Bank interface instructions:&#10;1. If you have made a transaction with  the account you selected it will show you the&#10;Date of the transaction what time it was and how much was transferred.&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;">
                     <font>
                         <Font name="Arial" size="12.0" />
                     </font>
                 </TextArea>
-            <ImageView fitHeight="262.0" fitWidth="410.0" layoutX="28.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="369.0" fitWidth="536.0" layoutX="65.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@image/Bank%20Statement%20.png" />
+                  <Image url="@image/history.png" />
                </image>
             </ImageView>
             </children>
