--- a/src/main/resources/com/example/FrontEnd/zManualCustomerLogin.fxml
+++ b/src/main/resources/com/example/FrontEnd/zManualCustomerLogin.fxml
@@ -233,19 +233,14 @@
         </Pane>
         <Pane layoutX="318.0" layoutY="111.0" prefHeight="565.0" prefWidth="621.0">
             <children>
-                <TextArea layoutX="14.0" layoutY="239.0" prefHeight="232.0" prefWidth="585.0" text="Login interface: The login interface let's the customer/employee access their account.&#10;&#10;Login Customer interface instructions: &#10;1. The customer needs to first provide their unique ID (8-digit number created by the bank, incase &#10;the customer forgets it,  an employee can fetch it for the customer) and password (password that you created during account creation) in order to log in.&#10;2. Then by clicking the &quot;Login&quot; button, the customer can successfully login to their respective account.&#10;&#10;Login Employee interface instructions: &#10;1. The employee needs to first provide their unique ID (8-digit number created by the bank, in case you forget it an employee can fetch it for you), password (password that you created during account creation) and Employee security key (only applicable for employees working in the bank).&#10;2. Then by clicking the &quot;Login&quot; button, the employee can successfully login to their respective account.&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;">
+                <TextArea layoutX="18.0" layoutY="354.0" prefHeight="149.0" prefWidth="585.0" text="Login interface: The login interface let's the customer/employee access their account.&#10;&#10;Login Customer interface instructions: &#10;1. The customer needs to first provide their unique ID (8-digit number created by the bank, incase &#10;the customer forgets it,  an employee can fetch it for the customer) and &#10;password (password that you created during account creation) in order to log in.&#10;&#10;2. Then by clicking the &quot;Login&quot; button, the customer can successfully login to their respective account.">
                     <font>
                         <Font name="Arial" size="12.0" />
                     </font>
                 </TextArea>
-            <ImageView fitHeight="206.0" fitWidth="296.0" layoutX="15.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="338.0" fitWidth="517.0" layoutX="76.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@image/Customer%20Login%20.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="210.0" fitWidth="304.0" layoutX="313.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@image/Employee%20Login.png" />
                </image>
             </ImageView>
             </children>
