--- a/src/main/resources/com/example/FrontEnd/zManualCustomerRegisterCustomer.fxml
+++ b/src/main/resources/com/example/FrontEnd/zManualCustomerRegisterCustomer.fxml
@@ -233,19 +233,14 @@
         </Pane>
         <Pane layoutX="318.0" layoutY="111.0" prefHeight="565.0" prefWidth="621.0">
             <children>
-                <TextArea layoutX="5.0" layoutY="255.0" prefHeight="241.0" prefWidth="577.0" text="The create account interface : There are 2 separate create account interface. &#10;One is for the customer (without security key) and the other is for employees (with the security key).&#10;Security key: A key of numbers that is needed to create an employee account and&#10; is only given by an admin account. When creating a customer account this is not needed.&#10;&#10;The create account interface instructions :&#10;1. The create account page allows the customer to make an account.&#10;2. A customer can create an accoubt by providing the customers First name, last name and password.&#10;3. The password has to follow the conventions(minimum 8 characters, minimum 1 lowercase letter,  lowercase letter, &#10;minimum 1 uppercase letter, minimum 1 special character ) and rules stated and must be confirmed by the customer. &#10;4. Finally by clicking the &quot;Create Account&quot; button the customer can successfully create an account in the bank's system.&#10;&#10;The create Employee account interface instructions :&#10;1. The employee needs to first select his/her title by clicking the “Title” option.&#10;2. A customer can create an accoubt by providing the customers First name, last name and password.&#10;3. The password has to follow the conventions(minimum 8 characters, minimum 1 lowercase letter,  lowercase letter, minimum 1 uppercase letter, minimum 1&#10;special character ) and rules stated and must be confirmed by the customer.&#10;4. After inputting all of the above mentioned inputs, the employee then needs to input his/her unique security key.&#10;5. Finally by clicking the &quot;Create Account&quot; button the customer can successfully create an account in the bank's system.&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;">
+                <TextArea layoutX="19.0" layoutY="314.0" prefHeight="180.0" prefWidth="577.0" text="The create account interface instructions :&#10;1. The create account page allows the customer to make an account.&#10;&#10;2. A customer can create an accoubt by providing the customers First name, last name and &#10;password.&#10;&#10;3. The password has to follow the conventions(minimum 8 characters, minimum 1 lowercase letter,  &#10;lowercase letter, minimum 1 uppercase letter, minimum 1 special character ) and rules stated and &#10;must be confirmed by the customer. &#10;&#10;4. The Name and last name must be between 3 and 13 characters With no spaces.&#10;&#10;5. Finally by clicking the &quot;Create Account&quot; button the customer can successfully create an account in&#10;the bank's system.&#10;">
                     <font>
                         <Font name="Arial" size="12.0" />
                     </font>
                 </TextArea>
-            <ImageView fitHeight="235.0" fitWidth="282.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="284.0" fitWidth="399.0" layoutX="122.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@image/Customer%20create%20account%20.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="206.0" fitWidth="306.0" layoutX="307.0" layoutY="10.0">
-               <image>
-                  <Image url="@../../../../../../../Employee%20Login.png" />
+                  <Image url="@image/customerRegister.png" />
                </image>
             </ImageView>
             </children>
