--- a/src/main/resources/com/example/FrontEnd/zManualCustomerStart.fxml
+++ b/src/main/resources/com/example/FrontEnd/zManualCustomerStart.fxml
@@ -233,14 +233,14 @@
         </Pane>
         <Pane layoutX="318.0" layoutY="111.0" prefHeight="565.0" prefWidth="621.0">
             <children>
-                <TextArea layoutX="14.0" layoutY="305.0" prefHeight="139.0" prefWidth="553.0" text="Main menu interface instructions&#10;&#10;The main menu is used to access the different features of the application&#10;What are trading account and login into it&#10;What are creating an employee account and logging into it&#10;Or clicking on the manual as you did&#10;&#10;&#10;&#10;&#10;This is only a placeholder for text we put in&#10;&#10;&#10;&#10;&#10;Mainly because it comes with a scroll in function&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;Is this be really annoying without it">
+                <TextArea layoutX="14.0" layoutY="305.0" prefHeight="139.0" prefWidth="553.0" text="Main menu interface instructions&#10;&#10;The main menu is used to access the different features of the application&#10;Login is to access the customer account&#10;Create account allows you to make a customer account&#10;Login employee allows you to log into your employee account&#10;Create employee Allows you to create an employee account&#10;Manual / about us takes you to were all the manuals in the about us pages&#10;&#10;Exit is for exiting the program">
                     <font>
                         <Font name="Arial" size="12.0" />
                     </font>
                 </TextArea>
-            <ImageView fitHeight="287.0" fitWidth="453.0" layoutX="12.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="287.0" fitWidth="453.0" layoutX="99.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@image/Screenshot%20(3).png" />
+                  <Image url="@image/start.png" />
                </image>
             </ImageView>
             </children>
