--- a/src/main/resources/com/example/FrontEnd/zManualCustomerUserMenu.fxml
+++ b/src/main/resources/com/example/FrontEnd/zManualCustomerUserMenu.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -231,11 +233,16 @@
         </Pane>
         <Pane layoutX="318.0" layoutY="111.0" prefHeight="565.0" prefWidth="621.0">
             <children>
-                <TextArea layoutX="15.0" layoutY="277.0" prefHeight="215.0" prefWidth="557.0" text="&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;">
+                <TextArea layoutX="15.0" layoutY="319.0" prefHeight="173.0" prefWidth="557.0" text="Customer:&#10;&#10;On the left side are the actions log out, transfer, profile, bank statement,  the manual / about us,&#10;The exit, and finally the two buttons that allow you to create a saving or checking account&#10;&#10;To select one of your accounts Click on the account then press the button select account below&#10;To have the account selected then you can either delete that account if it is empty or&#10;Click on bank statement to see the history of that Pacific account.&#10;">
                     <font>
                         <Font name="Arial" size="12.0" />
                     </font>
                 </TextArea>
+            <ImageView fitHeight="293.0" fitWidth="422.0" layoutX="100.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@image/UserMenu.png" />
+               </image>
+            </ImageView>
             </children>
         </Pane>
         <Pane layoutX="807.0" layoutY="620.0" prefHeight="56.0" prefWidth="132.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
